--- a/deck.mdx
+++ b/deck.mdx
@@ -1,24 +1,94 @@
-import { Head, Notes } from 'mdx-deck'
-import { theme } from './theme'
+import { themes, Head } from 'mdx-deck'
 
-export const themes = [ theme ]
+export const theme = themes.comic
 
 <Head>
-  <title>Presentation Title</title>
+  <title>An Overview of Design System</title>
 </Head>
 
-# Hello
+# Design System🎨
 
 ---
 
-## Edit this file
+<https://medium.com/eightshapes-llc/defining-design-systems-6dd4b03e0ff6>
 
-To create your presentation
+<https://medium.com/eightshapes-llc/typography-in-design-systems-6ed771432f1e>
 
-<Notes>
-Create speaker notes with the Notes component
-</Notes>
+<https://medium.com/eightshapes-llc/design-system-tiers-2c827b67eae1>
+
+[Design System Magic with CSS Houdini by Samuel Richard | CSSconf EU 2019](https://www.youtube.com/watch?v=1W79T2ibd5Y)
 
 ---
 
-<https://github.com/jxnblk/mdx-deck>
+## 👩 Diana Mounter
+
+Design Operations Manager at GitHub
+
+<https://broccolini.net/>
+
+---
+
+Design systems @github
+
+<https://github-ds.now.sh/#5>
+
+---
+
+## Typograph.js
+
+---
+
+## Styled System
+
+<https://medium.com/styled-components/build-better-component-libraries-with-styled-system-4951653d54ee>
+
+---
+
+## theme-ui
+
+<https://theme-ui.com/>
+
+💡 <https://system-ui.com/>
+
+---
+
+### Let's define the styles of this ppt!
+
+[comic.js](https://github.com/jxnblk/mdx-deck/blob/master/packages/themes/comic.js)
+
+---
+
+## tailwindcss
+
+Object Oriented CSS (OOCSS)
+
+Block Element Modifier (BEM)
+
+Functional CSS (Utilities)
+
+---
+
+## tachyon
+
+---
+
+## Primer
+
+https://primer.style
+
+---
+
+🍷
+
+---
+
+# 📚
+
+[Design Systems & React](https://github-ds.now.sh/)
+
+- [ ] https://github-ds.now.sh/#59
+- [ ] https://broccolini.net
+- [ ] https://stenciljs.com
+- [ ] https://uxdesign.cc/everything-you-need-to-know-about-design-systems-54b109851969
+- [ ] https://theme-ui.com/typography/
+- [ ] https://github.com/KyleAMathews/typography.js/tree/master/packages/typography
